After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675986 - Fix unsetting of the play icon in the main treeview
Fix unsetting of the play icon in the main treeview
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-13 21:18 UTC by Christophe Fergeau
Modified: 2012-05-14 14:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix unsetting of the play icon in the main treeview (1.28 KB, patch)
2012-05-13 21:18 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2012-05-13 21:18:00 UTC
When trying to unset the "play" icon for the GtkCellRendererPixbuf
used in the main treeview, an empty string was used ("") as the
name of the stock icon name to use instead of a NULL pointer (which
is the default stock icon name used by GtkCellRendererPixbuf). This
led to warnings in the console:
(sound-juicer:7060): Gtk-CRITICAL **: gtk_icon_set_render_icon_pixbuf:
assertion `icon_set != NULL' failed
Comment 1 Christophe Fergeau 2012-05-13 21:18:02 UTC
Created attachment 213967 [details] [review]
Fix unsetting of the play icon in the main treeview
Comment 2 Ross Burton 2012-05-14 08:24:17 UTC
Review of attachment 213967 [details] [review]:

Good catch.
Comment 3 Christophe Fergeau 2012-05-14 14:07:14 UTC
Attachment 213967 [details] pushed as 00dfe04 - Fix unsetting of the play icon in the main treeview