Fix unsetting of the play icon in the main treeview

When trying to unset the "play" icon for the GtkCellRendererPixbuf
used in the main treeview, an empty string was used ("") as the
name of the stock icon name to use instead of a NULL pointer (which
is the default stock icon name used by GtkCellRendererPixbuf). This
led to warnings in the console:
(sound-juicer:7060): Gtk-CRITICAL **: gtk_icon_set_render_icon_pixbuf:
assertion `icon_set != NULL' failed

https://bugzilla.gnome.org/show_bug.cgi?id=675986